# tutorial-flask-graphene-sqlalchemy

./: .gitignore  create_db.py  main.py  pyproject.toml
db/: __init__.py  posts.db
schemas/: __init__.py
