[tool.poetry]
name = "flask-graphene-sqlalchemy"
version = "0.1.0"
description = ""
authors = ["Min"]
readme = "README.md"

[tool.poetry.dependencies]
python=">=3.7"
sqlalchemy="1.4.36"
graphene-sqlalchemy="2.3.0"
graphene="2.1.9"
flask="2.1.2"
flask-GraphQL="2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
